# catalyst-scripts

./: .gitignore  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
migration/: BUILD.bazel  migrate-profiles.ts  migrate-scenes.ts
migration/resources/DefaultScenes/Default1/: QmTP1Y1N6NFazDGFD1Nq1ymitT5gCY6yuZiTLGYd3StAbf  entity.json
migration/resources/DefaultScenes/Default10/: QmSrRB2wPycK2aaAzQWpkWBzr21YmhmnXwzZTgt2s83Y5G  entity.json
migration/resources/DefaultScenes/Default11/: QmWX5zwgQZxxvJnKfFCPZXAa8xcg3mLXPJWxHw4MEQRdJE  entity.json
migration/resources/DefaultScenes/Default12/: QmNRx9gPRkSZyahR6PnDLdQgwtqNddqJ3ibkrt7y3hzY7q  entity.json
migration/resources/DefaultScenes/Default2/: QmbZpDZ7vAzMAFn9Wy1YFPzZsGTQzAJrgq1bAnhViF2v6Y  entity.json
migration/resources/DefaultScenes/Default3/: QmXtSSqJfTEFBoQeCe637rbhdU5Qfce8hu1etQJUAxHdaA  entity.json
migration/resources/DefaultScenes/Default4/: QmdXzM4NBidJsExpY8Hrg6tV83xSUMoMKwm3jSUkGU3pYE  entity.json
migration/resources/DefaultScenes/Default5/: Qmcvqc1hedPW35e94dFTg1a8xHVWbXTnq1Szb63yPbz41W  entity.json
migration/resources/DefaultScenes/Default6/: QmT9VUaQ3vz8AHCYErvjdnfBpqoABbsHBxJKwQFjmdvTNK  entity.json
migration/resources/DefaultScenes/Default7/: QmNjNQjtVxVBCm56ieNJfpEjTAeXvX2Tim2YCFAGuAmHha  entity.json
migration/resources/DefaultScenes/Default8/: QmVw7wPKwbYAwGARbYdyLbnhGTyQ8fgHLv5kzTAJEVC5bN  entity.json
migration/resources/DefaultScenes/Default9/: QmbbzRtY9cUebXN2FgjpomDNmp4aqT25NCmEsQQsQkWtzu  entity.json
migration/utils/: Hashing.ts  Helper.ts
old/: package.json
old/tools/: asset-bundle-analysis.ts  blacklist.ts  calculate-use-by-scenes.ts  check-file-availability.ts  check.ts  compare-history.ts  deploy-specific.ts  download-history.ts  fix.ts
old/tools/common/: DAOClient.ts  Global.ts  Requests.ts
src/: fix.ts  redeploy-wearable.ts  types.ts
src/utils/: Helpers.ts  Requests.ts
tools/: BUILD.bazel  asset-bundle-analysis.ts  blacklist.ts  calculate-use.ts  check-file-availability.ts  check.ts  download-history.ts  find-content.ts  fix.ts
tools/common/: Helper.ts  IO.ts  Requests.ts  types.ts
