package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "migrate-scenes",
    data = [
        "resources",
        "migration",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "migrate-scenes.ts",
)

nodejs_binary(
    name = "migrate-profiles",
    data = [
        "resources",
        "migration",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "migrate-profiles.ts",
)


filegroup(
    name = "resources",
    srcs = glob(
        [
            "resources/**/*",
        ],
    ),
)


ts_library(
    name = "migration",
    srcs = glob(["**/*.ts"]),
    deps = [
        "@npm//@types",
        "@npm//@types/node",
        "@npm//form-data",
        "@npm//@types/form-data",
        "@npm//multer",
        "@npm//@types/multer",
        "@npm//cids",
        "@npm//multihashing-async",
        "@npm//node-fetch",
        "@npm//@types/node-fetch",
        "@npm//eth-crypto",
        "@npm//tiny-async-pool",
        "@npm//@types/tiny-async-pool",
        "@npm//cli-progress",
        "@npm//@types/cli-progress",
        "@npm//csvtojson",
        "@npm//@types/csvtojson",
        "@npm//glob",
        "@npm//@types/glob",
        "@npm//argparse",
        "@npm//@types/argparse"
    ],
)